--- a/taroco-web-ui/layui/index.html
+++ b/taroco-web-ui/layui/index.html
@@ -3,13 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>TAROCO</title>
-	<meta name="renderer" content="webkit">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta http-equiv="Access-Control-Allow-Origin" content="*">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="format-detection" content="telephone=no">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="layui/css/layui.css" media="all" />
 	<link rel="stylesheet" href="modules/index/index.css" media="all" />
@@ -20,20 +14,6 @@
 		<div class="layui-header header">
 			<div class="layui-main mag0">
 				<a href="#" class="logo">TAROCO</a>
-				<ul class="layui-nav" pc>
-					<li class="layui-nav-item layui-this" data-menu="contentManagement">
-						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe63c;">&#xe63c;</i><cite>后台系统</cite></a>
-					</li>
-					<li class="layui-nav-item" data-menu="memberCenter" pc>
-						<a href="javascript:;"><i class="seraph icon-icon10" data-icon="icon-icon10"></i><cite>用户系统</cite></a>
-					</li>
-					<li class="layui-nav-item" data-menu="systemeSttings" pc>
-						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe620;">&#xe620;</i><cite>监控系统</cite></a>
-					</li>
-					<li class="layui-nav-item" data-menu="seraphApi" pc>
-						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe705;">&#xe705;</i><cite>使用文档</cite></a>
-					</li>
-				</ul>
 			    <!-- 顶部右侧菜单 -->
 			    <ul class="layui-nav top_menu">
 					<li class="layui-nav-item" id="userInfo">
@@ -81,12 +61,11 @@
 		</div>
 		<!-- 底部 -->
 		<div class="layui-footer footer">
-			<p><span>copyright @2018 TAROCO</span>　　<a href="https://gitee.com/WeeChang_Sc/Taroco" target="_blank" class="layui-btn layui-btn-danger layui-btn-sm">捐赠作者</a></p>
+			<p><span>copyright @2017-2018 TAROCO</span>　　<a href="https://gitee.com/WeeChang_Sc/Taroco" target="_blank" class="layui-btn layui-btn-danger layui-btn-sm">捐赠作者</a></p>
 		</div>
 	</div>
 
 	<script type="text/javascript" src="layui/layui.js"></script>
 	<script type="text/javascript" src="modules/index/index.js"></script>
-	<script type="text/javascript" src="modules/common/cache.js"></script>
 </body>
 </html>
